--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
                     Jasleen Kaur
                 </h2>
                 <h6>
-                    Music Playlist
+                    Music Player
                 </h6>
             </div>
         </div>
